--- a/frontend/src/app/components/catalog/catalog.component.html
+++ b/frontend/src/app/components/catalog/catalog.component.html
@@ -3,5 +3,5 @@
   @if (loading) {
     <div class="text-center py-4">Loading...</div>
   }
-  <app-search-results [products]="products"></app-search-results>
+  <app-search-results [phdDissertations]="phdDissertations()"></app-search-results>
 </div>
