--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -3,11 +3,11 @@
     type="text"
     [(ngModel)]="query"
     placeholder="Search products..."
-    class="flex-1 p-2 border rounded shadow focus:outline-none focus:ring-2 focus:ring-blue-500"
+    class="flex-1 p-4 text-lg h-14 border rounded shadow focus:outline-none focus:ring-2 focus:ring-blue-500"
   />
   <button
     (click)="onSearch()"
-    class="ml-2 p-2 bg-blue-500 text-white rounded hover:bg-blue-600"
+    class="ml-2 p-4 h-14 bg-blue-500 text-white rounded hover:bg-blue-600 text-lg"
   >
     Search
   </button>
