--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,9 +1,14 @@
-<div class="flex min-h-screen flex-col">
-  <app-header></app-header>
+<div class="flex min-h-screen flex-col bg-gray-50 w-full">
+  <!-- Header -->
+  <app-header class="w-full"></app-header>
 
-  <main id="main-content" class="min-h-screen">
-    <router-outlet></router-outlet>
+  <!-- Main Content -->
+  <main id="main-content" class="flex-1 py-6 w-full">
+    <div class="px-4 w-full">
+      <router-outlet></router-outlet>
+    </div>
   </main>
 
-  <app-footer></app-footer>
-</div>>
+  <!-- Footer -->
+  <app-footer class="w-full"></app-footer>
+</div>
