--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'tailwindcss';
+
+/* Your SCSS below */
+body {
+  font-family: system-ui, sans-serif;
+}
